# test

./: .gitignore  Makefile  a.c  a_default.s  a_riscv.s  byte_test  byte_test.c  gcc_macros.txt  prepro_2.ll  prepro_2.s  riscv_macros.txt  sEMU.c  test_clang
src/: algo_0.c  algo_2.c  assem_1.s  basic_0.c  basic_1.c  basic_2.c  basic_3.c  bitwise_0.c  bitwise_1.c  gdb_0.c  gdb_1.c  gdb_2.c  gdb_3.c  hello.c  hello_1.c  hello_2.c  hello_3.c  hello_bitfield.c  hello_union.c  inlass_0.c  mylinkedlist_raw.c  mylinkedlist_v2.c  prepro_0.c  prepro_1.c  prepro_2.c
src/GrammerLearning/complexlib/: complex.c  complex.h  main.c
src/GrammerLearning/doubly_linked_list/: doubly_linked_list.c  doubly_linked_list.h
src/GrammerLearning/ini2xml/: ini2xml.c  test.ini  test.xml
src/GrammerLearning/single_linked_list/: linked_list.c  linked_list.h
src/GrammerLearning/testproj_0/: stack.c  stack.h
src/GrammerLearning/testproj_2_useMake/: Makefile  main  main.c
src/GrammerLearning/testproj_2_useMake/src/arithmetic/: divide.c
src/GrammerLearning/testproj_4/: main
src/JosephRing/: JosephRing.c
src/UsefulCode/trim/: trim.c  trim.h
src/testproj_1/: main  main.c
src/testproj_2/: main.d
src/testproj_2/src/number_theory/: gcd.c
src/testproj_2/src/statistics/: mean.c
src/testproj_3/: CMakeLists.txt
src/testproj_3/include/: math_utils.h
src/testproj_3/src/number_theory/: is_prime.c
src/testproj_3/src/statistics/: variance.c
